<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailViewModel"
            type="halit.sen.cryptomarket.viewModel.DetailViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailActivity"
        android:background="@color/darkBlue">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@color/darkBlue">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:src="@drawable/ic_back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/detail_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            >

            <TextView
                android:id="@+id/coin_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{detailViewModel.title}"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_alignParentTop="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coin_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{detailViewModel.price}"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/coin_title_text"
                android:textColor="@color/white"
                android:textSize="24sp" />


            <LinearLayout
                android:id="@+id/percent_change_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/coin_price_text"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:padding="12dp"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/one_hour_percent_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/one_hour_percent_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/one_hour_text"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/one_hour_percent_arrow"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="2dp"
                            android:src="@drawable/red_arrow_icon" />

                        <TextView
                            android:id="@+id/one_hour_percent_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{detailViewModel.oneHourChange}"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/one_day_percent_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/twentyfour_hour_text"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/one_day_percent_arrow"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="2dp"
                            android:src="@drawable/green_arrow_icon" />

                        <TextView
                            android:id="@+id/one_day_percent_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{detailViewModel.dailyChange}"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/one_week_percent_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/one_week_text"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/one_week_percent_arrow"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="2dp"
                            android:src="@drawable/green_arrow_icon" />

                        <TextView
                            android:id="@+id/one_week_percent_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{detailViewModel.weeklyChange}"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/suply_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/percent_change_layout"
                android:layout_marginTop="25dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/circulating_supply_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/total_supply_text"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/circulating_supply_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:drawablePadding="8dp"
                        android:text="@{detailViewModel.totalSupply}"
                        android:drawableLeft="@drawable/btc_supply_icon"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/total_supply_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/max_supply_text"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/max_supply_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{detailViewModel.maxSupply}"
                        android:drawablePadding="8dp"
                        android:drawableLeft="@drawable/btc_max_supply_icon"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/volume_market_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/suply_layout"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/volume_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/daily_volume_text"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/volume_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:text="@{detailViewModel.dailyVolume}"
                        android:drawablePadding="6dp"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/btc_volume_icon"
                        tools:ignore="NotSibling"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/market_cap_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/market_cap_text"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/market_cap_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:drawablePadding="6dp"
                        android:text="@{detailViewModel.marketCap}"
                        android:layout_marginLeft="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/btc_market_cap_icon"
                        tools:ignore="NotSibling"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/add_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/white_rounded_text_bg"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@{detailViewModel.addFavText}"
                android:paddingTop="12dp"
                android:layout_below="@+id/volume_market_layout"
                android:layout_marginTop="24dp"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </RelativeLayout>

        </ScrollView>
    </RelativeLayout>
</layout>